--- a/index.html
+++ b/index.html
@@ -12,7 +12,41 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section"> 
+        <h2>HTML</h2>
+
+        <ul>
+          <li>HTML is the building blocks of the web. HTML provides the foundation for websites.</li>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body elemtnet represents the visible content shown to the user.</li>
+        </ul>
+      </section>
+      
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        
+        <ul>
+          <li>CSS is how you give a website style; e.g., color, fonts, formating.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+
+        <ul>
+          <li>Git is a version contro that keeps track of each version of a project that you give it and allows you to collaborate smothly with others.</li>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: create and new branch and switches to it</li>
+        </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+
+        <ul>
+          <li>JavaScript allows you to make a website interactive for users.</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
