debugged function scripts.js, added js notes index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
         <ul>
           <li>JavaScript allows you to make a website interactive for users.</li>
+          <li>A variable is a named container that alows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer exectes code in a scripts.</li>
         </ul>
       </section>
     </main>
